# coasting

./: README.md
.mise/: config.toml
.mise/tasks/: dev  format  init
backend/: pyproject.toml
backend/scripts/: run_server.py
backend/src/coasting/api/: api.py
backend/src/coasting/api/routes/: process.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: BasicSelector.css  BasicSelector.tsx  CoasterGrid.css  CoasterGrid.tsx  ColorSegmenter.css  ColorSegmenter.tsx  CursorTracer.css  CursorTracer.tsx  DominantColorSelector.css  DominantColorSelector.tsx  ImageEditor.css  ImageEditor.tsx  ImageLoader.css  ImageLoader.tsx  LayerPreview.css  LayerPreview.tsx  LayersInput.css  LayersInput.tsx  PolygonEditor.css  PolygonEditor.tsx  colorSegmenter.worker.ts
frontend/src/components/imageProcessing/: colorUtils.ts  events.ts  reducer.ts  selectionUtils.ts
frontend/src/events/: createEventSourcedState.ts  eventStore.ts  events.ts
frontend/src/pages/: ImageSplittingPage.css  ImageSplittingPage.tsx
